<resources>
    <string name="app_name">JIRD</string>
    <string name="Orders">Orders</string>
    <string name="Clients">Clients</string>
    <string name="finance">Financial Analysis</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>

    <string name="login_hint_pass">Please enter password</string>
    <string name="login_hint_name">Please enter user name</string>

</resources>
