<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_background"
        android:id="@+id/img_logo"
        android:paddingTop="60dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_gravity="bottom">

        <ImageView
            app:srcCompat="@drawable/usename"
            android:id="@+id/login_label_phone"
            android:layout_weight="0.17"
            android:layout_height="20dp"
            android:layout_width="5dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/login_edit_phone"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0.35"
            android:ems="10"
            android:gravity="bottom|left"
            android:hint="@string/login_hint_name"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_gravity="bottom">

        <ImageView
            app:srcCompat="@drawable/password"
            android:id="@+id/login_label_pass"
            android:layout_weight="0.17"
            android:layout_height="20dp"
            android:layout_width="5dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/login_edit_psw"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0.35"
            android:ems="10"
            android:gravity="bottom|left"
            android:hint="@string/login_hint_pass"
            android:inputType="textPassword"

            android:paddingLeft="10dp"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/login_btn_confirm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="@color/widget_color"
            android:elevation="2dp"

            android:text="@string/login"
            android:textColor="@color/base_color_text_white" />
    </LinearLayout>

</LinearLayout>